--- a/AboutUs.html
+++ b/AboutUs.html
@@ -87,7 +87,7 @@
                 <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
             </ul>
             <div class="cart-icon" aria-live="polite" onclick="toggleCartView()">
-                <img src="Images/cart-icon.png" alt="Cart Icon">
+                <img src="Images/shopping-cart.png" alt="Cart Icon">
                 <span class="cart-total">$0.00</span>
             </div>
         </nav>
