--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
             <h1 class="site-title">ABC Fitness Studios</h1>
             <img src="Images/logo.jpg" alt="Logo" class="logo">
         </div>
-        <nav role="navigation" aria-label="Main navigation">
-            <ul class="menu">
+        <nav role="navigation" aria-label="Main navigation" style="display: flex; align-items: center;">
+            <ul class="menu" style="margin-right: auto;">
                 <li><a href="index.html" class="nav-button">Home</a></li>
                 <li><a href="AboutUs.html" class="nav-button">About Us</a></li>
                 <li><a href="store.html" class="nav-button">Products/Classes</a></li>
                 <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
             </ul>
             <div class="cart-icon" aria-live="polite" onclick="toggleCartView()">
-                <img src="Images/shopping-cart.png" alt="Cart Icon">
+                <img src="Images/shopping-cart.png" alt="Cart Icon" style="width: 30px; height: auto;">
                 <span class="cart-total">$0.00</span>
             </div>
         </nav>
