--- a/store.html
+++ b/store.html
@@ -15,14 +15,14 @@
         .header-image img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: cover.
         }
         .header-image .logo {
             position: absolute;
             top: 10px;
             left: 10px;
             width: 100px; /* Adjust size as needed */
-            height: auto;
+            height: auto.
         }
         .header-image .site-title {
             position: absolute;
@@ -31,11 +31,11 @@
             transform: translate(-50%, -50%);
             color: white;
             font-size: 2em;
-            text-shadow: 2px 2px 4px #000;
+            text-shadow: 2px 2px 4px #000.
         }
         .social-icons img {
             width: 30px; /* Adjust size as needed */
-            height: auto;
+            height: auto.
         }
         #cart-view {
             position: fixed;
@@ -47,7 +47,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 10px;
             z-index: 1000;
-            display: none;
+            display: none.
         }
     </style>
 </head>
@@ -58,15 +58,15 @@
             <h1 class="site-title">ABC Fitness Studios</h1>
             <img src="Images/logo.jpg" alt="Logo" class="logo">
         </div>
-        <nav role="navigation" aria-label="Main navigation">
-            <ul class="menu">
+        <nav role="navigation" aria-label="Main navigation" style="display: flex; align-items: center;">
+            <ul class="menu" style="margin-right: auto;">
                 <li><a href="index.html" class="nav-button">Home</a></li>
                 <li><a href="AboutUs.html" class="nav-button">About Us</a></li>
                 <li><a href="store.html" class="nav-button">Products/Classes</a></li>
                 <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
             </ul>
             <div class="cart-icon" aria-live="polite" onclick="toggleCartView()">
-                <img src="Images/shopping-cart.png" alt="Cart Icon">
+                <img src="Images/shopping-cart.png" alt="Cart Icon" style="width: 30px; height: auto;">
                 <span class="cart-total">$0.00</span>
             </div>
         </nav>
