--- a/store.html
+++ b/store.html
@@ -15,14 +15,14 @@
         .header-image img {
             width: 100%;
             height: 100%;
-            object-fit: cover.
+            object-fit: cover;
         }
         .header-image .logo {
             position: absolute;
             top: 10px;
             left: 10px;
             width: 100px; /* Adjust size as needed */
-            height: auto.
+            height: auto;
         }
         .header-image .site-title {
             position: absolute;
@@ -31,11 +31,11 @@
             transform: translate(-50%, -50%);
             color: white;
             font-size: 2em;
-            text-shadow: 2px 2px 4px #000.
+            text-shadow: 2px 2px 4px #000;
         }
         .social-icons img {
             width: 30px; /* Adjust size as needed */
-            height: auto.
+            height: auto;
         }
         #cart-view {
             position: fixed;
@@ -47,7 +47,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 10px;
             z-index: 1000;
-            display: none.
+            display: none;
         }
     </style>
 </head>
