Update product one

--- a/store.html
+++ b/store.html
@@ -77,9 +77,9 @@
             <h2>Our Products</h2>
             <div class="grid-container">
                 <div class="grid-item">
-                    <img src="Images/product1.jpg" alt="Product 1" class="product-image">
-                    <p>Product 1 - $20.00</p>
-                    <button onclick="addToCart({ name: 'Product 1', price: 20, qty: 1, image: 'Images/product1.jpg' })">Add to Cart</button>
+                    <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_IndividualKickboxing.png" alt="Individual Kickboxing" class="product-image" style="width: 200px; height: 200px;">
+                    <p>Individual Kickboxing - $20.00</p>
+                    <button onclick="addToCart({ name: 'Individual Kickboxing', price: 20, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_IndividualKickboxing.png' })">Add to Cart</button>
                 </div>
                 <!-- Add similar blocks for other products -->
             </div>
