--- a/store.html
+++ b/store.html
@@ -81,6 +81,11 @@
                     <p>Individual Kickboxing - $20.00</p>
                     <button onclick="addToCart({ name: 'Individual Kickboxing', price: 20, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_IndividualKickboxing.png' })">Add to Cart</button>
                 </div>
+                <div class="grid-item">
+                    <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_GroupKickboxing.png" alt="Group Kickboxing" class="product-image" style="width: 200px; height: 200px;">
+                    <p>Group Kickboxing - $45.00</p>
+                    <button onclick="addToCart({ name: 'Group Kickboxing', price: 45, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_GroupKickboxing.png' })">Add to Cart</button>
+                </div>
                 <!-- Add similar blocks for other products -->
             </div>
         </section>
