--- a/store.html
+++ b/store.html
@@ -86,6 +86,16 @@
                     <p>Group Kickboxing - $45.00</p>
                     <button onclick="addToCart({ name: 'Group Kickboxing', price: 45, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_GroupKickboxing.png' })">Add to Cart</button>
                 </div>
+                <div class="grid-item">
+                    <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_IndividualYoga.png" alt="Individual Yoga" class="product-image" style="width: 200px; height: 200px;">
+                    <p>Individual Yoga - $20.00</p>
+                    <button onclick="addToCart({ name: 'Individual Yoga', price: 20, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_IndividualYoga.png' })">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_GroupYoga.png" alt="Group Yoga" class="product-image" style="width: 200px; height: 200px;">
+                    <p>Group Yoga - $40.00</p>
+                    <button onclick="addToCart({ name: 'Group Yoga', price: 40, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_GroupYoga.png' })">Add to Cart</button>
+                </div>
                 <!-- Add similar blocks for other products -->
             </div>
         </section>
