--- a/store.html
+++ b/store.html
@@ -49,6 +49,10 @@
             z-index: 1000;
             display: none;
         }
+        .title-center {
+            text-align: center;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -74,7 +78,7 @@
 
     <main>
         <section>
-            <h2>Our Products</h2>
+            <h2 class="title-center">Our Products</h2>
             <div class="grid-container">
                 <div class="grid-item">
                     <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_IndividualKickboxing.png" alt="Individual Kickboxing" class="product-image" style="width: 200px; height: 200px;">
