--- a/store.html
+++ b/store.html
@@ -88,7 +88,17 @@
                     <p>Group Yoga - $40.00</p>
                     <button onclick="addToCart({ name: 'Group Yoga', price: 40, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_GroupYoga.png' })">Add to Cart</button>
                 </div>
-                <!-- Add similar blocks for other products -->
+                <!-- Add the new products here -->
+                <div class="grid-item">
+                    <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_IndividualPilates.png" alt="Individual Pilates" class="product-image" style="width: 200px; height: 200px;">
+                    <p>Individual Pilates - $25.00</p>
+                    <button onclick="addToCart({ name: 'Individual Pilates', price: 25, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_IndividualPilates.png' })">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_GroupPilates.png" alt="Group Pilates" class="product-image" style="width: 200px; height: 200px;">
+                    <p>Group Pilates - $45.00</p>
+                    <button onclick="addToCart({ name: 'Group Pilates', price: 45, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_GroupPilates.png' })">Add to Cart</button>
+                </div>
             </div>
         </section>
     </main>
