Added Final Products

--- a/store.html
+++ b/store.html
@@ -99,6 +99,21 @@
                     <p>Group Pilates - $45.00</p>
                     <button onclick="addToCart({ name: 'Group Pilates', price: 45, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_GroupPilates.png' })">Add to Cart</button>
                 </div>
+                <div class="grid-item">
+                    <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_TeeShirt.png" alt="T-shirt" class="product-image" style="width: 200px; height: 200px;">
+                    <p>T-shirt - $15.00</p>
+                    <button onclick="addToCart({ name: 'T-shirt', price: 15, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_TeeShirt.png' })">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_WaterBottle.png" alt="Water Bottle" class="product-image" style="width: 200px; height: 200px;">
+                    <p>Water Bottle - $20.00</p>
+                    <button onclick="addToCart({ name: 'Water Bottle', price: 20, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_WaterBottle.png' })">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/ABC Fitness Studio Gallery Images 2/Client2_YogaMat.png" alt="Yoga Mat" class="product-image" style="width: 200px; height: 200px;">
+                    <p>Yoga Mat - $10.00</p>
+                    <button onclick="addToCart({ name: 'Yoga Mat', price: 10, qty: 1, image: 'Images/ABC Fitness Studio Gallery Images 2/Client2_YogaMat.png' })">Add to Cart</button>
+                </div>
             </div>
         </section>
     </main>
