--- a/AboutUs.html
+++ b/AboutUs.html
@@ -108,6 +108,7 @@
                 <p>Sunday: Closed</p>
             </div>
             <div class="grid-item">
+                <h2>Contact Form</h2>
                 <form class="form-vertical" action="#">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
