--- a/store.html
+++ b/store.html
@@ -41,6 +41,20 @@
             text-align: center;
             margin-bottom: 20px;
         }
+        .subscribe-button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 1rem;
+            color: white;
+            background-color: #007BFF; /* Adjust as needed */
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-bottom: 20px;
+        }
+        .subscribe-button:hover {
+            background-color: #0056b3; /* Adjust as needed */
+        }
     </style>
 </head>
 <body>
@@ -126,6 +140,7 @@
     </div>
 
     <footer>
+        <button class="subscribe-button">Subscribe</button>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <div class="social-icons">
             <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
