--- a/AboutUs.html
+++ b/AboutUs.html
@@ -144,7 +144,7 @@
     </div>
 
     <footer>
-        <button class="subscribe-button">Subscribe</button>
+        <button class="subscribe-button" onclick="subscribe()">Subscribe</button>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <div class="social-icons">
             <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
@@ -154,6 +154,11 @@
         <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
 
+    <script>
+        function subscribe() {
+            alert('Thank you for subscribing.');
+        }
+    </script>
     <script src="scripts.js"></script>
 </body>
 </html>
