--- a/store.html
+++ b/store.html
@@ -140,7 +140,7 @@
     </div>
 
     <footer>
-        <button class="subscribe-button">Subscribe</button>
+        <button class="subscribe-button" onclick="alert('Thank you for subscribing!')">Subscribe</button>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <div class="social-icons">
             <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
