--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>ABC Fitness Studios</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
         .header-image {
             position: relative;
             width: 100%;
@@ -70,6 +76,14 @@
         }
         .subscribe-button:hover {
             background-color: #0056b3; /* Adjust as needed */
+        }
+        main {
+            flex: 1;
+        }
+        footer {
+            background-color: #f0f0f0;
+            padding: 20px;
+            text-align: center;
         }
     </style>
 </head>
