--- a/AboutUs.html
+++ b/AboutUs.html
@@ -141,6 +141,7 @@
         <ul id="cart-items"></ul>
         <button onclick="clearCart()">Clear Cart</button>
         <button onclick="toggleCartView()">Close</button>
+        <button onclick="processOrder()">Process Order</button> <!-- Add Process Order Button -->
     </div>
 
     <footer>
