--- a/index.html
+++ b/index.html
@@ -120,7 +120,17 @@
         <ul id="cart-items"></ul>
         <button onclick="clearCart()">Clear Cart</button>
         <button onclick="toggleCartView()">Close</button>
-        <button onclick="processOrder()">Process Order</button> <!-- Add Process Order Button -->
+
+        <!-- Add form for name, address, and phone number -->
+        <form id="order-form" onsubmit="processOrder(event)">
+            <label for="customer-name">Name:</label>
+            <input type="text" id="customer-name" name="customer-name" required>
+            <label for="customer-address">Address:</label>
+            <input type="text" id="customer-address" name="customer-address" required>
+            <label for="customer-phone">Phone Number:</label>
+            <input type="text" id="customer-phone" name="customer-phone" required>
+            <button type="submit">Process Order</button>
+        </form>
     </div>
 
     <footer>
