--- a/index.html
+++ b/index.html
@@ -118,10 +118,13 @@
     <div id="cart-view">
         <h2>Your Cart</h2>
         <ul id="cart-items"></ul>
-        <button onclick="clearCart()">Clear Cart</button>
+        <button id="clear-cart-btn" onclick="clearCart()">Clear Cart</button>
         <button onclick="toggleCartView()">Close</button>
+        <button onclick="showOrderForm()">Process Order</button>
+    </div>
 
-        <!-- Add form for name, address, and phone number -->
+    <div id="order-form-view" style="display: none;">
+        <h2>Order Form</h2>
         <form id="order-form" onsubmit="processOrder(event)">
             <label for="customer-name">Name:</label>
             <input type="text" id="customer-name" name="customer-name" required>
@@ -129,7 +132,8 @@
             <input type="text" id="customer-address" name="customer-address" required>
             <label for="customer-phone">Phone Number:</label>
             <input type="text" id="customer-phone" name="customer-phone" required>
-            <button type="submit">Process Order</button>
+            <button type="submit">Submit Order</button>
+            <button type="button" onclick="hideOrderForm()">Go Back</button>
         </form>
     </div>
 
