--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
             padding: 20px;
             text-align: center;
         }
+        form label {
+            display: block;
+            margin-top: 10px;
+        }
+        form input {
+            display: block;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
