--- a/AboutUs.html
+++ b/AboutUs.html
@@ -141,7 +141,7 @@
         <ul id="cart-items"></ul>
         <button id="clear-cart-btn" onclick="clearCart()">Clear Cart</button>
         <button onclick="toggleCartView()">Close</button>
-        <button onclick="showOrderForm()">Process Order</button> <!-- Add Process Order Button -->
+        <button onclick="showOrderForm()">Process Order</button>
         <div id="order-form-view" style="display: none;">
             <h2>Order Form</h2>
             <form id="order-form" onsubmit="processOrder(event)">
