--- a/AboutUs.html
+++ b/AboutUs.html
@@ -144,7 +144,7 @@
         <button onclick="showOrderForm()">Process Order</button>
         <div id="order-form-view" style="display: none;">
             <h2>Order Form</h2>
-            <form id="order-form" onsubmit="processOrder(event)">
+            <form id="order-form" class="order-form" onsubmit="processOrder(event)">
                 <label for="customer-name">Name:</label>
                 <input type="text" id="customer-name" name="customer-name" required>
                 <label for="customer-address">Address:</label>
