--- a/store.html
+++ b/store.html
@@ -137,10 +137,10 @@
         <ul id="cart-items"></ul>
         <button id="clear-cart-btn" onclick="clearCart()">Clear Cart</button>
         <button onclick="toggleCartView()">Close</button>
-        <button onclick="showOrderForm()">Process Order</button> <!-- Add Process Order Button -->
+        <button onclick="showOrderForm()">Process Order</button>
         <div id="order-form-view" style="display: none;">
             <h2>Order Form</h2>
-            <form id="order-form" onsubmit="processOrder(event)">
+            <form id="order-form" class="order-form" onsubmit="processOrder(event)">
                 <label for="customer-name">Name:</label>
                 <input type="text" id="customer-name" name="customer-name" required>
                 <label for="customer-address">Address:</label>
