--- a/Community.html
+++ b/Community.html
@@ -63,6 +63,18 @@
         function subscribe() {
             alert('Thank you for subscribing.');
         }
+
+        function toggleCartView() {
+            // Add your cart toggle functionality here
+        }
+
+        function addToCart(item) {
+            // Add your add to cart functionality here
+        }
+
+        function updateCartTotal() {
+            // Add your update cart total functionality here
+        }
     </script>
     <script src="scripts.js"></script>
 </body>
