--- a/Community.html
+++ b/Community.html
@@ -5,6 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Involvement - ABC Fitness Studios</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .header-image {
+            position: relative;
+            width: 100%;
+            height: 50vh; /* Half the size of the body */
+            overflow: hidden;
+        }
+        .header-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .header-image .logo {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            width: 100px; /* Adjust size as needed */
+            height: auto;
+        }
+        .header-image .site-title {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 2em;
+            text-shadow: 2px 2px 4px #000;
+        }
+        .social-icons img {
+            width: 30px; /* Adjust size as needed */
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <header role="banner">
@@ -48,6 +81,27 @@
         </div>
     </main>
 
+    <div id="cart-view">
+        <h2>Your Cart</h2>
+        <ul id="cart-items"></ul>
+        <button id="clear-cart-btn" onclick="clearCart()">Clear Cart</button>
+        <button onclick="toggleCartView()">Close</button>
+        <button onclick="showOrderForm()">Process Order</button>
+        <div id="order-form-view" style="display: none;">
+            <h2>Order Form</h2>
+            <form id="order-form" onsubmit="processOrder(event)">
+                <label for="customer-name">Name:</label>
+                <input type="text" id="customer-name" name="customer-name" required>
+                <label for="customer-address">Address:</label>
+                <input type="text" id="customer-address" name="customer-address" required>
+                <label for="customer-phone">Phone Number:</label>
+                <input type="text" id="customer-phone" name="customer-phone" required>
+                <button type="submit">Submit Order</button>
+                <button type="button" onclick="hideOrderForm()">Go Back</button>
+            </form>
+        </div>
+    </div>
+
     <footer>
         <button class="subscribe-button" onclick="subscribe()">Subscribe</button>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
@@ -65,15 +119,29 @@
         }
 
         function toggleCartView() {
-            // Add your cart toggle functionality here
+            var cartView = document.getElementById('cart-view');
+            if (cartView.style.display === 'none' || cartView.style.display === '') {
+                cartView.style.display = 'block';
+            } else {
+                cartView.style.display = 'none';
+            }
         }
 
-        function addToCart(item) {
-            // Add your add to cart functionality here
+        function clearCart() {
+            // Clear cart functionality
         }
 
-        function updateCartTotal() {
-            // Add your update cart total functionality here
+        function showOrderForm() {
+            document.getElementById('order-form-view').style.display = 'block';
+        }
+
+        function hideOrderForm() {
+            document.getElementById('order-form-view').style.display = 'none';
+        }
+
+        function processOrder(event) {
+            event.preventDefault();
+            // Process order functionality
         }
     </script>
     <script src="scripts.js"></script>
