--- a/Community.html
+++ b/Community.html
@@ -9,7 +9,7 @@
         .header-image {
             position: relative;
             width: 100%;
-            height: 50vh; /* Half the size of the body */
+            height: 50vh; /* Consistent height with index.html */
             overflow: hidden;
         }
         .header-image img {
@@ -21,7 +21,7 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            width: 100px; /* Adjust size as needed */
+            width: 100px; /* Consistent size with index.html */
             height: auto;
         }
         .header-image .site-title {
@@ -34,8 +34,13 @@
             text-shadow: 2px 2px 4px #000;
         }
         .social-icons img {
-            width: 30px; /* Adjust size as needed */
+            width: 30px; /* Consistent size with index.html */
             height: auto;
+        }
+        footer {
+            background-color: #f0f0f0; /* Matching background color from index.html */
+            padding: 20px;
+            text-align: center;
         }
     </style>
 </head>
