--- a/store.html
+++ b/store.html
@@ -69,7 +69,7 @@
                 <li><a href="index.html" class="nav-button">Home</a></li>
                 <li><a href="AboutUs.html" class="nav-button">About Us</a></li>
                 <li><a href="store.html" class="nav-button">Products/Classes</a></li>
-                <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
+                <li><a href="Community.html" class="nav-button">Community</a></li>
             </ul>
             <div class="cart-icon" aria-live="polite" onclick="toggleCartView()">
                 <img src="Images/shopping-cart.png" alt="Cart Icon" style="width: 30px; height: auto;">
