--- a/Community.html
+++ b/Community.html
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer style="background-color: #f0f0f0; padding: 20px; text-align: center;">
         <button class="subscribe-button" onclick="subscribe()">Subscribe</button>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <div class="social-icons">
@@ -155,7 +155,7 @@
         </div>
         <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
-
+    
     <script>
         function subscribe() {
             alert('Thank you for subscribing.');
