--- a/AboutUs.html
+++ b/AboutUs.html
@@ -157,7 +157,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer style="background-color: #f0f0f0; padding: 20px; text-align: center;">
         <button class="subscribe-button" onclick="subscribe()">Subscribe</button>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <div class="social-icons">
