--- a/store.html
+++ b/store.html
@@ -153,8 +153,8 @@
         </div>
     </div>
 
-    <footer>
-        <button class="subscribe-button" onclick="alert('Thank you for subscribing!')">Subscribe</button>
+    <footer style="background-color: #f0f0f0; padding: 20px; text-align: center;">
+        <button class="subscribe-button" onclick="subscribe()">Subscribe</button>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <div class="social-icons">
             <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
